--- a/main.css
+++ b/main.css
@@ -23,6 +23,9 @@ h1 {
 h2 {
     font-size: 1.5rem;
 }
+h3 {
+    font-size: 1.3rem;
+}
 * {
     font-family: Helvetica, Arial, sans-serif;
     font-size: 1rem;
